# p2pop

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindBotan2.cmake  FindTBB.cmake  Findp2pop-rpc.cmake  Findxxhash.cmake
include/p2pop/: base.hpp  crypto.hpp  link.hpp  network.hpp  network_prelude.hpp  plugin.hpp  remote.hpp  status.hpp
plugin/: main.cpp
proto/: base.proto  crypto.capnp.old  location.proto  msg.proto  node.proto  options.proto
src/: base.cpp  crypto.cpp  crypto.cpp.autosave  link.cpp  link.hxx  network.cpp  remote.cpp  status.cpp
src/link/: udp.cpp
tests/: wip.cxx
